<?xml version="1.0"?>
<package format="2">
  <name>hero_chassis_controller</name>
  <version>0.1.0</version>
  <description>Provides a controller for the hero robot chassis.</description>
  <maintainer email="guo13691299609@qq.com">Pengyu Guo</maintainer>
  <license>BSD</license>
  <author email="guo13691299609@qq.com">Pengyu Guo</author>

  <!-- buildtool_depend: dependencies of the build process -->
  <buildtool_depend>catkin</buildtool_depend>
  <!-- build_depend: dependencies only used in source files -->
  <build_depend>boost</build_depend>
  <!-- depend: build, export, and execution dependency -->
  <depend>eigen</depend>
  <depend>roscpp</depend>
  <depend>roslint</depend>
  <depend>sensor_msgs</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>control_toolbox</depend>
  <depend>control_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rm_description</depend>
  <depend>realtime_tools</depend>
  <depend>tf</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <export>
    <controller_interface plugin="${prefix}/hero_chassis_controller_plugins.xml"/>
  </export>
</package>
